2007-07-01  Jaap Haitsma  <jaap@haitsma.org>

	* src/ephy-history-window.c, src/bookmarks/ephy-bookmarks-editor.c,
	src/ephy-window.c: Use GTK_STOCK_ABOUT icon i.s.o GNOME_STOCK_ABOUT
	Fixes bug #452769

2007-07-01  Jaap Haitsma  <jaap@haitsma.org>
	
	Changelog entry from the previous commit. I accidently changed the
	wrong Changelog file
        * lib/egg/update-toolbareditor-from-libegg: script that syncs local
	toolbar editor copy with the one in libegg SVN
	* lib/egg/egg*: sync with toolbar editor in libegg. Sync obtained by 
	running update-toolbareditor-from-libegg
	* lib/egg/eggintl.h: removed not needed anymore by egg-toolbareditor
	* lib/egg/Makefile.am: remove eggintl.h

2007-06-28  Christian Persch  <chpe@gnome.org>

	* configure.ac:
	* data/Makefile.am:
	A data/weasel-ua-pref.js.in:

        Make UA ff-compatible. This fixes
        https://bugzilla.mozilla.org/show_bug.cgi?id=334967 . See also
        Camino bug https://bugzilla.mozilla.org/show_bug.cgi?id=384721 and
        https://bugzilla.mozilla.org/show_bug.cgi?id=385999 for discussion.

2007-06-26  Luca Ferretti  <elle.uca@libero.it>

	* lib/ephy-stock-icons.h: use "document-page-setup" named icon for
	STOCK_PRINT_SETUP (now available on gnome-icon-theme trunk); add
	comments to explain icons origin (icon naming spec, custom,
	deprecated...)

2007-06-25  Felix Riemann  <friemann@svn.gnome.org>

	* lib/egg/egg-toolbar-editor.c: (event_box_realize_cb):
	Make named drag-icons toolbar-sized like the others.
	Part of bug #450590.

2007-06-24  Felix Riemann  <friemann@svn.gnome.org>

	* lib/egg/egg-toolbar-editor.c: (editor_create_item_from_name):
	Cleanups to my last commit.
	Fixes bug 450590 (Felix Riemann, Jaap Haitsma)

2007-06-24  Felix Riemann  <friemann@svn.gnome.org>

	* lib/egg/egg-toolbar-editor.c: (editor_create_item_from_name):
	Add a workaround to take into account that Gtk{Radio,Toggle}Actions
	only set either the stock-id or the icon-name property depending on