@@ -1,21 +1,0 @@
-#!/bin/sh
-# Get latest toolbar editor from libegg
-# Developers using the toolbar editor in their projects can use this script to
-# fetch the latest toolbar editor from libegg
-echo "Obtaining latest version of toolbar editor from libegg"
-
-FILES="egg-editable-toolbar.c \
-       egg-toolbars-model.c \
-       egg-toolbar-editor.c \
-       eggtreemultidnd.c \
-       egg-editable-toolbar.h \
-       egg-toolbars-model.h \
-       egg-toolbar-editor.h \
-       eggtreemultidnd.h \
-       eggmarshalers.list" 
-
-for FILE in $FILES 
-do
-  svn export http://svn.gnome.org/svn/libegg/trunk/libegg/toolbareditor/$FILE
-done
-
