@@ -1,3 +1,12 @@
+2007-07-03  Jaap Haitsma  <jaap@haitsma.org>
+
+        * lib/egg/update-toolbareditor-from-libegg: removed
+        * lib/egg/update-toolbareditor-from-libegg.sh: added
+	Rename to update-toolbareditor-from-libegg.sh
+	Also updated the script such it updates itself
+        * lib/egg/egg*:
+	Sync with latest libegg toolbareditor
+
 2007-07-01  Jaap Haitsma  <jaap@haitsma.org>
 
 	* src/ephy-history-window.c, src/bookmarks/ephy-bookmarks-editor.c,
